--- a/public-html/index.html
+++ b/public-html/index.html
@@ -4,6 +4,8 @@
         <title>Kubernetes test</title>
     </head>
     <body>
-        <p>This is a tutorial of hosting simple HTML page on Apache web server.</p>
+        <p>This is a tutorial of hosting simple HTML page on Apache web server.
+        1
+        </p>
     </body>
 </html>
